--- a/app/src/main/res/layout/my_list_item.xml
+++ b/app/src/main/res/layout/my_list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!--텍스트뷰 커스터마이징-->
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/text1"
         style="?android:attr/dropDownItemStyle"
