--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -211,14 +211,12 @@
             android:minHeight="0dp"
             android:minWidth="0dp"
             android:id="@+id/delete_Btn"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
+            android:textSize="20sp"
+            android:gravity="center"
             android:id="@+id/count_textview"/>
         <Button
             android:layout_width="0dp"
